syntax = "proto3";

package api.category.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package="github.com/qthuy2k1/thesis-management-backend/reporting-stage/api/v1";

service ReportingStageService {
    rpc CreateReportingStage(CreateReportingStageRequest) returns (CreateReportingStageResponse){
        option (google.api.http) = {
            post: "/api/report-stage"
            body: "*"
        };
    }
    
    rpc GetReportingStage(GetReportingStageRequest) returns (GetReportingStageResponse){
        option (google.api.http) = {
            get: "/api/report-stage/{id}"
        };
    }

    rpc UpdateReportingStage(UpdateReportingStageRequest) returns (UpdateReportingStageResponse){
        option (google.api.http) = {
            put: "/api/report-stage/{id}"
            body: "*"
        };
    }

    rpc DeleteReportingStage(DeleteReportingStageRequest) returns (DeleteReportingStageResponse){
        option (google.api.http) = {
            delete: "/api/report-stage/{id}"
        };
    }

    rpc GetReportingStages(GetReportingStagesRequest) returns (GetReportingStagesResponse) {
        option (google.api.http) = {
            get: "/api/report-stage"
        };
    }
}

message CommonReportingStageResponse {
    int64 statusCode = 1 [(validate.rules).int64.gte = 1];
    string message = 2 [(validate.rules).string = {min_len: 2}];
}


// ====== category ======
message ReportingStageInput {
    string label = 1 [(validate.rules).string = {min_len: 2}];
    string description = 2 [(validate.rules).string = {min_len: 2}];
    string value = 3;
}

message ReportingStageResponse {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    string label = 2 [(validate.rules).string = {min_len: 2}];
    string description = 3 [(validate.rules).string = {min_len: 2}];
    string value = 4;
}

message CreateReportingStageRequest {
   ReportingStageInput category = 1 [(validate.rules).message = {required: true}];
}

message CreateReportingStageResponse {
    CommonReportingStageResponse response = 1 [(validate.rules).message = {required: true}];
}


// ====== GET ======
message GetReportingStageRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message GetReportingStageResponse {
    CommonReportingStageResponse response = 1 [(validate.rules).message = {required: true}];
    ReportingStageResponse category = 2 [(validate.rules).message = {required: true}];
}

// ====== PUT ======
message UpdateReportingStageRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    ReportingStageInput category = 2 [(validate.rules).message = {required: true}];
}

message UpdateReportingStageResponse {
    CommonReportingStageResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== DELETE ======
message DeleteReportingStageRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message DeleteReportingStageResponse {
    CommonReportingStageResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== GET ALL ======
message GetReportingStagesRequest {}

message GetReportingStagesResponse {
    CommonReportingStageResponse response = 1 [(validate.rules).message = {required: true}]; 
    repeated ReportingStageResponse categorys = 2;
}
